--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,7 @@
 <header>
 	<nav>
 		<ul>
+			<li><%= link_to "Home", '#' %></li>
 			<li><%= link_to "Login", '#' %></li>
 			<li><%= link_to "Sign Up", '#' %></li>
 		</ul>
