--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.field_with_errors {
+	margin-bottom: 0;
+	display: inline;
+}
+#error_explanation {
+	margin: 10px;
+	border: 1px solid #FF0000;
+	display: inline-block;
+	ul {
+		margin: 5px;
+		padding: 0;
+		li {
+			font-size: 16px;
+			margin: 2px;
+			list-style-type: none;
+		}
+	}
+}
