--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,9 +1,15 @@
 <header>
 	<nav>
 		<ul>
-			<li><%= link_to "Home", '#' %></li>
-			<li><%= link_to "Login", '#' %></li>
-			<li><%= link_to "Sign Up", '#' %></li>
+			<li><%= link_to "Home", root_path %></li>
+			<% if logged_in? %>
+				<li><%= link_to "Profile", current_user %></li>
+				<li><%= link_to "Settings", edit_user_path(current_user) %></li>
+				<li><%= link_to "Log out", logout_path, method: "delete" %></li>
+			<% else %>
+				<li><%= link_to "Login", login_path %></li>
+				<li><%= link_to "Sign Up", signup_path %></li>
+			<% end %>
 		</ul>
 	</nav>
 </header>
