--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,7 +11,7 @@
  * file per style scope.
  *
  *= require normalize
- *= require layout
+ *= require custom
  *= require_tree .
  *= require_self
  */
