--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,6 @@
-<% provide(:title, "Privacy Policy") %>
-<div class="container">
+<% provide(:title, "About") %>
+
 	<h1>About</h1>
-	<p>Work in progress.</p>
-</div>
+	<p>There are many nights before I go to sleep thinking, I could have used my time more wisely. So maybe this can help people who feel the same way.</p>
+	<p>Right now it is just a planner and it is the user who has to put in the work to actually turn things around. Maybe one day this will be able to help the user in many more ways.</p>
+	<p>Best of luck on your future endeavours.</p>
