--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,6 +1,7 @@
 <h1>Create New Event</h1>
 <div>
 	<%= form_for(@event) do |f| %>
+	  <%= render 'shared/error_messages', object: f.object %><br>
 		<%= f.label :name %><br>
 		<%= f.text_field :name %><br>
 		<%= f.label :about %><br>
@@ -8,3 +9,5 @@
 		<%= f.submit %>
 	<% end %>
 </div>
+
+<%= link_to "All custom events", events_path, class: "generic-button" %>
