--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%= yield(:title) %></title>
+  <title><%= full_title(yield(:title)) %></title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= favicon_link_tag %>
   <%= csrf_meta_tags %>
   <!--[if lt IE 9]>
 	  <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
@@ -12,9 +13,12 @@
 </head>
 <body>
 	<%= render 'layouts/header' %>
-	<% flash.each do |key,value| %>
-		<%= content_tag(:div, value, class: "alert-#{key}") %>
-	<% end %>
-	<%= yield %>
+	<div class="main-wrapper">
+		<% flash.each do |key,value| %>
+			<%= content_tag(:div, value, class: "alert-#{key}") %>
+		<% end %>
+		<%= yield %>
+
+	</div>
 </body>
 </html>
