--- a/app/assets/stylesheets/custom.css.scss.erb
+++ b/app/assets/stylesheets/custom.css.scss.erb
@@ -562,6 +562,7 @@ table.month-table {
 		margin-top: 20px;
 		border: 1px solid red;
 		padding-left: 5px;
+		background-color: white;
 	}
 }
 .alert-danger {
