--- a/app/assets/stylesheets/custom.css.scss.erb
+++ b/app/assets/stylesheets/custom.css.scss.erb
@@ -345,7 +345,8 @@ table.month-table {
 		.hour-container {
 			height: 100px;
 			width: 120px;
-			padding: 5px;
+			padding: 2px;
+			text-align: right;
 			vertical-align: top;
 			font-size: 16px;
 		}
