add terms/privacy links

--- a/app/assets/stylesheets/custom.css.scss.erb
+++ b/app/assets/stylesheets/custom.css.scss.erb
@@ -565,6 +565,10 @@ table.month-table {
 		padding-left: 5px;
 		background-color: white;
 	}
+	.agreement {
+		width: 200px;
+		font-size: 12px;
+	}
 }
 .alert-danger {
 	font-family: $date-font;
